apps/playerok-pre-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: playerok-pre-dev
  labels:
    app: playerok
    environment: pre-dev
