apps/playerok-pre-dev/ingress-core.yaml
# Pre-dev contour: core ingress (namespace playerok-pre-dev)
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core
  namespace: playerok-pre-dev
  labels:
    app: core
    environment: pre-dev
    component: core
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: playerok-core.pre-dev.devflux.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: core
                port:
                  number: 8765
  tls:
    - hosts:
        - playerok-core.pre-dev.devflux.ru
      secretName: core-tls
